# labori

./: .gitignore  Cargo.toml  README.md  config.toml
back_client/: Cargo.toml  config.toml
back_client/src/: _clientrs  acquisition.rs  client.rs  config.rs  error.rs  logger.rs  main.rs  model.rs  server.rs  storage.rs  web.rs
back_client/tcp_test/: tcp_client.py
front_server/: Cargo.toml  _index.js  config.toml  index-multi.html  index.html  index.js  package-lock.json  package.json
front_server/public/: client-multi.js  client.js  clock.js  favicon.ico:Zone.Identifier  save_64.json  style-multi.css  style.css  view.js
front_server/src/: db_handler.rs  main.rs  model.rs  url_handler.rs  utils.rs
src/: _server.rs  client.rs  config.rs  db.rs  error.rs  load.rs  logger.rs  main.rs  model.rs  poller.rs  runner.rs  server.rs  value.rs
tcp_test/: tcp_client.py
tcp_tst/: tcp_client.py
web/: index-multi.html  index.html
web/public/: client-multi.js  client.js  style-multi.css  style.css
