[package]
name = "labori"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5.13", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.97", features = ["derive"] }
serde_json = "1.0.81"
thiserror = { version = "1.0.31" }
encoding = { version = "0.2" }
toml = "0.5.8"
chrono = "0.4"
